--- a/smth.html
+++ b/smth.html
@@ -10,5 +10,24 @@
   <h2>Население</h2>
 <img src="https://losangeles.zagranitsa.com/images/ck/798a42af20545248227d5e4bfdb5ec4a.jpg" alt="">
 <p>В прошлом подавляющее большинство населения города составляли переселенцы из Европы: в середине XIX века — преимущественно ирландцы и немцы, к началу XX века — евреи и итальянцы. В 1940 году примерно 94 % населения неофициальной столицы США составляли белые. Однако этнический облик стремительно менялся по мере переселения белых в пригороды. Это явление, получившее название «субурбанизация», впервые в массовом масштабе проявилось именно в Нью-Йорке. В пределах городской черты уезжавших замещали представители других рас. За последние десятилетия Нью-Йорк принял немало выходцев из Азии, особенно китайцев, индийцев и пакистанцев, а также уроженцев многих стран Латинской Америки и Карибского бассейна.</p>
+
+<h2>Мy fav singers</h2>
+  <ul>
+    <strong>
+    <li>Billie Ilish</li>
+    <li>Doja Cat</li>
+    <li>Eva Miller</li>
+    <li>Eva</li>
+    <li>Instasamka</li>
+    <li>Steve Lacy</li>
+    <li>EWF</li>
+    <li>lil peep</li>
+    <li>Grande</li>
+    <li><abbr title="Эдьдар Джарахов">Dlgreez</abbr></li>
+    <li>Cassanova</li>
+    <li>Katy Perry</li>
+    <li>Dua Lipa</li>
+    </strong>
+    </ul>
 </body>
 </html>
