--- a/smth.html
+++ b/smth.html
@@ -29,5 +29,17 @@
     <li>Dua Lipa</li>
     </strong>
     </ul>
+    
+    <h1>Osh</h1>
+  <article>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorem iure quam facere nemo itaque ipsam dolore modi enim praesentium cupiditate delectus dicta, provident ratione quasi architecto, aliquam dolores! Odio.
+    Nulla, totam sed iusto rerum molestias veniam mollitia nihil minima commodi inventore et eius aliquid harum animi numquam minus illum consectetur eveniet. Ut eaque aspernatur exercitationem molestiae aliquam, corrupti quo!
+    Nihil nesciunt aperiam quasi id animi corporis ullam assumenda adipisci quo? Exercitationem a accusamus, neque rem explicabo quod dolor facere beatae error nam porro, placeat et ea nisi iusto cum.
+    Aliquid, odit dolorem. Hic, repudiandae ipsum necessitatibus, dicta molestiae soluta, blanditiis sapiente adipisci ullam optio error neque fuga facere doloremque voluptatibus? Quibusdam incidunt exercitationem, veritatis porro vel possimus. Illo, quae.</p>
+    
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dicta, velit voluptatem ad dolorum, nesciunt praesentium recusandae odio ipsa aut est quae itaque, possimus eligendi ea inventore consectetur molestiae. Esse.
+  Perspiciatis doloremque obcaecati, perferendis, deleniti dolorem soluta, voluptates repellat laudantium adipisci aspernatur molestias earum vitae exercitationem nostrum et? Dolores esse quasi aperiam quos laudantium, accusantium iusto incidunt ea ullam nemo?</p>
+
+  </article>
 </body>
 </html>
