--- a/smth.html
+++ b/smth.html
@@ -29,7 +29,7 @@
     <li>Dua Lipa</li>
     </strong>
     </ul>
-    
+
     <h1>Osh</h1>
   <article>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorem iure quam facere nemo itaque ipsam dolore modi enim praesentium cupiditate delectus dicta, provident ratione quasi architecto, aliquam dolores! Odio.
@@ -40,6 +40,8 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dicta, velit voluptatem ad dolorum, nesciunt praesentium recusandae odio ipsa aut est quae itaque, possimus eligendi ea inventore consectetur molestiae. Esse.
   Perspiciatis doloremque obcaecati, perferendis, deleniti dolorem soluta, voluptates repellat laudantium adipisci aspernatur molestias earum vitae exercitationem nostrum et? Dolores esse quasi aperiam quos laudantium, accusantium iusto incidunt ea ullam nemo?</p>
 
+  <h1>Issyk-Kul</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore pariatur iste voluptatibus facere a illum suscipit blanditiis eum quam praesentium eligendi eveniet placeat, eius veniam unde sit cumque tempora sed!</p>
   </article>
 </body>
 </html>
