--- a/smth.html
+++ b/smth.html
@@ -43,5 +43,8 @@
   <h1>Issyk-Kul</h1>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore pariatur iste voluptatibus facere a illum suscipit blanditiis eum quam praesentium eligendi eveniet placeat, eius veniam unde sit cumque tempora sed!</p>
   </article>
+
+  <img src="https://losangeles.zagranitsa.com/images/ck/798a42af20545248227d5e4bfdb5ec4a.jpg" alt="">
+
 </body>
 </html>
