--- a/smth.html
+++ b/smth.html
@@ -45,6 +45,11 @@
   </article>
 
   <img src="https://losangeles.zagranitsa.com/images/ck/798a42af20545248227d5e4bfdb5ec4a.jpg" alt="">
+  <h2>Флаг</h2>
+  
+  <p>Первый флаг штата был принят 20 мая 1861 года, в день выхода штата из Союза и в основном использовался вооружёнными формированиями штата, принимавших участие в боях Гражданской войны. Первые десять полков (позже получившие номера с одиннадцатого по двадцатый) получили шёлковые флаги, изготовленные частным подрядчиком из Норфолка. На следующий год для них были изготовлены шерстяные и хлопковые флаги.</p>
+
+
 
 </body>
 </html>
