--- a/smth.html
+++ b/smth.html
@@ -49,6 +49,11 @@
   
   <p>Первый флаг штата был принят 20 мая 1861 года, в день выхода штата из Союза и в основном использовался вооружёнными формированиями штата, принимавших участие в боях Гражданской войны. Первые десять полков (позже получившие номера с одиннадцатого по двадцатый) получили шёлковые флаги, изготовленные частным подрядчиком из Норфолка. На следующий год для них были изготовлены шерстяные и хлопковые флаги.</p>
 
+  <h2>История</h2>
+<img src="https://prousa.info/images/states/indiana/angel_mounds_historic_site.jpg" alt="">
+<p>В древности на территории штата процветала развитая Миссисипская культура — часть археологической культуры «строителей курганов». Ко времени прихода европейцев здесь обитали индейские племена майами, потаватоми, пианкашо, делаваров и кикапу.</p>
+
+
 
 
 </body>
