--- a/smth.html
+++ b/smth.html
@@ -53,6 +53,9 @@
 <img src="https://prousa.info/images/states/indiana/angel_mounds_historic_site.jpg" alt="">
 <p>В древности на территории штата процветала развитая Миссисипская культура — часть археологической культуры «строителей курганов». Ко времени прихода европейцев здесь обитали индейские племена майами, потаватоми, пианкашо, делаваров и кикапу.</p>
 
+<h1>Naryn</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit illo numquam eos? Fugit, eaque ad veritatis rem earum reiciendis! Veniam natus possimus obcaecati repudiandae quo provident minus, blanditiis nesciunt consequuntur.
+  Eaque alias magni reiciendis sapiente esse quae nisi! Vel optio delectus quibusdam illo unde tenetur molestiae est, voluptas ab officiis vero perspiciatis asperiores, dolore necessitatibus sapiente nobis atque recusandae harum.</p>
 
 
 
