--- a/smth.html
+++ b/smth.html
@@ -56,6 +56,13 @@
 <h1>Naryn</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit illo numquam eos? Fugit, eaque ad veritatis rem earum reiciendis! Veniam natus possimus obcaecati repudiandae quo provident minus, blanditiis nesciunt consequuntur.
   Eaque alias magni reiciendis sapiente esse quae nisi! Vel optio delectus quibusdam illo unde tenetur molestiae est, voluptas ab officiis vero perspiciatis asperiores, dolore necessitatibus sapiente nobis atque recusandae harum.</p>
+<h1>XXXX</h1>
+
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora asperiores rerum vel minima et hic, omnis tenetur voluptatum iste <br>quisquam doloremque mollitia corporis cumque quia temporibus aliquid vero provident vitae?</p>
+  <p>Mollitia facilis incidunt dolor ex vero temporibus, ducimus ullam. Repudiandae beatae earum nulla esse ab consequatur, temporibus porro autem cumque pariatur non vitae delectus eveniet, praesentium rerum saepe. Provident, aperiam.</p>
+  <p>Blanditiis, tempora. Et atque quo suscipit quos possimus aliquid magnam, culpa, doloremque quidem, soluta totam? Dolorum eum vero consequatur id temporibus quod exercitationem incidunt voluptas. Fuga ducimus ut dignissimos quod.</p>
+
+<img src="https://icdn.lenta.ru/images/2021/04/27/16/20210427163138131/square_320_c09ebae17387b7d6eeb9fa0d42afe5ee.jpg" alt="" srcset="">
 
 
 
