--- a/smth.html
+++ b/smth.html
@@ -64,7 +64,7 @@
 
 <img src="https://icdn.lenta.ru/images/2021/04/27/16/20210427163138131/square_320_c09ebae17387b7d6eeb9fa0d42afe5ee.jpg" alt="" srcset="">
 
-
+<em>rfrjqnj ntrcn</em>
 
 </body>
 </html>
