--- a/smth.html
+++ b/smth.html
@@ -69,6 +69,7 @@
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dicta veniam facilis cum? Eligendi veniam
     laudantium dolorum voluptatibus deleniti ullam in fugit, aut nulla earum praesentium quas natus repellat facilis.
   </p>
+<footer>Алишерова Гульназ</footer>
 
 </body>
 </html>
