--- a/smth.html
+++ b/smth.html
@@ -40,6 +40,7 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dicta, velit voluptatem ad dolorum, nesciunt praesentium recusandae odio ipsa aut est quae itaque, possimus eligendi ea inventore consectetur molestiae. Esse.
   Perspiciatis doloremque obcaecati, perferendis, deleniti dolorem soluta, voluptates repellat laudantium adipisci aspernatur molestias earum vitae exercitationem nostrum et? Dolores esse quasi aperiam quos laudantium, accusantium iusto incidunt ea ullam nemo?</p>
 
+  <strong>имеет большое значение</strong>
   <h1>Issyk-Kul</h1>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore pariatur iste voluptatibus facere a illum suscipit blanditiis eum quam praesentium eligendi eveniet placeat, eius veniam unde sit cumque tempora sed!</p>
   </article>
@@ -70,6 +71,7 @@
     laudantium dolorum voluptatibus deleniti ullam in fugit, aut nulla earum praesentium quas natus repellat facilis.
   </p>
 <footer>Алишерова Гульназ</footer>
+
 
 </body>
 </html>
