--- a/smth.html
+++ b/smth.html
@@ -70,6 +70,25 @@
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dicta veniam facilis cum? Eligendi veniam
     laudantium dolorum voluptatibus deleniti ullam in fugit, aut nulla earum praesentium quas natus repellat facilis.
   </p>
+  <ol>
+    <strong>
+    <li>Ф.Добронравов</li>
+    <li>Л.Арзамасова</li>
+    <li>А.Cергеевна</li>
+    <li>М.Олеговна</li>
+    <li>Т.Арзыкеева</li>
+    <li>В.Васиьлев</li>  
+    <li>Д.Мельникова</li>
+    <li>А.Леонов</li>
+    <li>Б.Усенов</li>
+    <li>Ж.Майрамбек у.</li>
+    <li>Б.Осмонканов</li>
+    <li>А.Уланов</li>
+    <li>А.Кошмал</li>
+    <li>Н.Николаевич</li>
+    <li>Л.Артемьева</li>
+    </strong>
+  </ol>
 <footer>Алишерова Гульназ</footer>
 
 
