--- a/smth.html
+++ b/smth.html
@@ -89,8 +89,11 @@
     <li>Л.Артемьева</li>
     </strong>
   </ol>
-<footer>Алишерова Гульназ</footer>
 
+  <H1>Jalal-Abad</H1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aperiam fugit aspernatur necessitatibus repellat aliquam voluptatum beatae doloribus facere suscipit, cupiditate totam rerum. Ab asperiores reiciendis doloremque! Nemo, sapiente! Itaque?
+  Fuga minima at atque perferendis voluptatum obcaecati aut libero delectus, odio saepe ipsam nesciunt similique, molestiae, tempore rem. Necessitatibus sit temporibus iure dolore, rem vero nostrum optio aspernatur nesciunt dolores!</p>
+<footer>Алишерова Гульназ</footer>
 
 </body>
 </html>
