--- a/smth.html
+++ b/smth.html
@@ -93,6 +93,10 @@
   <H1>Jalal-Abad</H1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aperiam fugit aspernatur necessitatibus repellat aliquam voluptatum beatae doloribus facere suscipit, cupiditate totam rerum. Ab asperiores reiciendis doloremque! Nemo, sapiente! Itaque?
   Fuga minima at atque perferendis voluptatum obcaecati aut libero delectus, odio saepe ipsam nesciunt similique, molestiae, tempore rem. Necessitatibus sit temporibus iure dolore, rem vero nostrum optio aspernatur nesciunt dolores!</p>
+
+  <h1>Chui</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero facere recusandae reprehenderit suscipit dolores illum eveniet adipisci, fuga dignissimos nihil eos velit numquam dolore nemo quam quisquam voluptatem, odit illo.
+  Repellendus cupiditate ducimus corrupti recusandae ratione vitae eius sunt facere, et doloribus exercitationem suscipit at atque, est in aliquam dolor? Repellendus error, ab incidunt fugit aspernatur asperiores rem architecto nobis.</p>
 <footer>Алишерова Гульназ</footer>
 
 </body>
