--- a/smth.html
+++ b/smth.html
@@ -97,6 +97,19 @@
   <h1>Chui</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero facere recusandae reprehenderit suscipit dolores illum eveniet adipisci, fuga dignissimos nihil eos velit numquam dolore nemo quam quisquam voluptatem, odit illo.
   Repellendus cupiditate ducimus corrupti recusandae ratione vitae eius sunt facere, et doloribus exercitationem suscipit at atque, est in aliquam dolor? Repellendus error, ab incidunt fugit aspernatur asperiores rem architecto nobis.</p>
+
+  <table>
+    <tr>
+      <th>January <dialog open>This is an open dialog window</dialog></th>
+      <th>February</th>
+      <th>March</th>
+    </tr>
+    <tr>
+      <td>31</td>
+      <td>28</td>
+      <td>31</td>
+    </tr>
+    </table>
 <footer>Алишерова Гульназ</footer>
 
 </body>
