--- a/smth.html
+++ b/smth.html
@@ -110,6 +110,10 @@
       <td>31</td>
     </tr>
     </table>
+    <h2>Население</h2>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2hzldCfb-Lax6mFIQgAMK4Z3J-hDT59eoG2vIg1bXGEZBhjpnAom4rab71i_I5FPYzI8&usqp=CAU" alt="">
+<p>В штате Индиана живут около 6 520 000 человек (пятнадцатое место по численности населения среди штатов США). Средняя плотность населения в "Штате хузьеров" - около 70 человек на км2 (шестнадцатое место в США).</p>
+
 <footer>Алишерова Гульназ</footer>
 
 </body>
