--- a/smth.html
+++ b/smth.html
@@ -114,6 +114,12 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2hzldCfb-Lax6mFIQgAMK4Z3J-hDT59eoG2vIg1bXGEZBhjpnAom4rab71i_I5FPYzI8&usqp=CAU" alt="">
 <p>В штате Индиана живут около 6 520 000 человек (пятнадцатое место по численности населения среди штатов США). Средняя плотность населения в "Штате хузьеров" - около 70 человек на км2 (шестнадцатое место в США).</p>
 
+<p>Символика флага.</p>
+  
+  <p>Факел — свобода и просвещение, лучи вокруг него — их далеко идущее влияние.</p>
+ <p> Тринадцать звёзд по внешней окружности — первоначальное количество штатов.</p>
+  <p>Пять внутренних звёзд — последующие штаты США.</p>
+  <p>Большая звезда — штат Индиана. Таким образом, общее количество звёзд указывает на то, что штат Индиана стал девятнадцатым штатом США.</p>
 <footer>Алишерова Гульназ</footer>
 
 </body>
