--- a/smth.html
+++ b/smth.html
@@ -120,6 +120,12 @@
  <p> Тринадцать звёзд по внешней окружности — первоначальное количество штатов.</p>
   <p>Пять внутренних звёзд — последующие штаты США.</p>
   <p>Большая звезда — штат Индиана. Таким образом, общее количество звёзд указывает на то, что штат Индиана стал девятнадцатым штатом США.</p>
+
+  <header>
+    <h1>Штат Нью-Йорк</h1>
+    <img src="https://i.ytimg.com/vi/PLWWSjO3KqI/maxresdefault.jpg" alt="">
+  </header>
+
 <footer>Алишерова Гульназ</footer>
 
 </body>
