--- a/smth.html
+++ b/smth.html
@@ -126,6 +126,9 @@
     <img src="https://i.ytimg.com/vi/PLWWSjO3KqI/maxresdefault.jpg" alt="">
   </header>
 
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Texas_in_United_States.svg/300px-Texas_in_United_States.svg.png" alt="" srcset=""> <img src="https://upload.wikimedia.org/wikipedia/ru/thumb/d/d7/TexasMap1.png/280px-TexasMap1.png" alt="" srcset="">
+<p>География Техаса очень обширна и разнообразна. Штат является вторым по величине в США после Аляски,[1] занимая примерно 7% воды и суши от общей площади территории государства. Техас является самым южным штатом, на котором располагается часть Великих равнин, заканчивающихся у горной системы Восточная Сьерра-Мадре в Мексике. Штат находится на юге США и причисляется как к южному, так и к юго-западному регионам США.</p>
+
 <footer>Алишерова Гульназ</footer>
 
 </body>
