--- a/smth.html
+++ b/smth.html
@@ -129,6 +129,14 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Texas_in_United_States.svg/300px-Texas_in_United_States.svg.png" alt="" srcset=""> <img src="https://upload.wikimedia.org/wikipedia/ru/thumb/d/d7/TexasMap1.png/280px-TexasMap1.png" alt="" srcset="">
 <p>География Техаса очень обширна и разнообразна. Штат является вторым по величине в США после Аляски,[1] занимая примерно 7% воды и суши от общей площади территории государства. Техас является самым южным штатом, на котором располагается часть Великих равнин, заканчивающихся у горной системы Восточная Сьерра-Мадре в Мексике. Штат находится на юге США и причисляется как к южному, так и к юго-западному регионам США.</p>
 
+<nav>
+  <ul>
+    <li><a href="#Nature">Природа</a></li>
+    <li><a href="#Theatre">Театр</a></li>
+    <li><a href="#Food">Еда</a></li>
+    <li><a href="#Sights">Достопримечательности</a></li>
+  </ul>
+</nav>
 <footer>Алишерова Гульназ</footer>
 
 </body>
