--- a/smth.html
+++ b/smth.html
@@ -142,6 +142,7 @@
   <img src="https://avatars.mds.yandex.net/get-zen_doc/2376594/pub_5f919dab2f985a0dd7920f12_5f91d7fbb28cf05184a95fcc/scale_1200" alt="" sizes="" srcset="">
  <p>11 января 1861 власти штата Алабама объявили о выходе из Союза и приняли официальный флаг, разработанный несколькими женщинами из Монтгомери, последние штрихи к которому были выполнены Фрэнсисом Коррой.</p>
 
+ <del>Twitter</del> <ins>Telegram</ins>
 <footer>Алишерова Гульназ</footer>
 
 </body>
