--- a/smth.html
+++ b/smth.html
@@ -144,6 +144,7 @@
 
  <del>Twitter</del> <ins>Telegram</ins>
  <mark>esse</mark>
+ <blockquote>aaaliluyaaa</blockquote>
 <footer>Алишерова Гульназ</footer>
 
 </body>
