--- a/smth.html
+++ b/smth.html
@@ -145,6 +145,14 @@
  <del>Twitter</del> <ins>Telegram</ins>
  <mark>esse</mark>
  <blockquote>aaaliluyaaa</blockquote>
+
+ <article>
+<h2>Batken</h2>
+    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum molestiae deleniti quis, laborum provident nostrum. Reiciendis commodi possimus libero, esse enim molestiae fugiat debitis exercitationem nostrum repellendus quod aut nam.
+    Eum quod deserunt numquam sequi et mollitia, tempore illo animi, magni enim ducimus fugiat praesentium. Voluptatibus vitae a omnis, adipisci, cupiditate, ullam voluptates aut maiores eaque deserunt laudantium modi eius!</P>
+ </article>
+
+ 
 <footer>Алишерова Гульназ</footer>
 
 </body>
