--- a/smth.html
+++ b/smth.html
@@ -152,6 +152,7 @@
     Eum quod deserunt numquam sequi et mollitia, tempore illo animi, magni enim ducimus fugiat praesentium. Voluptatibus vitae a omnis, adipisci, cupiditate, ullam voluptates aut maiores eaque deserunt laudantium modi eius!</P>
  </article>
 
+ <b>привет</b>
  
 <footer>Алишерова Гульназ</footer>
 
