--- a/smth.html
+++ b/smth.html
@@ -154,6 +154,12 @@
 
  <b>привет</b>
  <small>encourage</small>
+ <dl>
+  <dt>Coffee</dt>
+  <dd>Black hot drink</dd>
+  <dt>Milk</dt>
+  <dd>White cold drink</dd>
+</dl>
  
 <footer>Алишерова Гульназ</footer>
 
