--- a/smth.html
+++ b/smth.html
@@ -160,6 +160,18 @@
   <dt>Milk</dt>
   <dd>White cold drink</dd>
 </dl>
+
+<ul>
+ 
+  <h2>Мои любимые сериалы<h2>
+<li>Сваты</li>
+<li>Кухня</li>
+<li>Отель Элеон</li>
+<li>Папины Дочки</li>
+<li>Кошунаны Тандабайт</li>
+<li>ХО</li>
+<li>XO Sisters</li>
+</ul>
  
 <footer>Алишерова Гульназ</footer>
 
