--- a/smth.html
+++ b/smth.html
@@ -173,6 +173,23 @@
 <li>XO Sisters</li>
 </ul>
  
+<strong>
+  <h2>Fav блогеrs</h2>
+  <li>Адушкина</li>
+  <li>Акмаль</li>
+  <li>Амина, Нурбек</li>
+  <li>Эльдана</li>
+  <li>Нурислам, Аружан Нуртаза</li>
+  <li>Настюха Ивлеева</li>
+  <li>Дилара</li>
+  <li>Members of XO <abbr title="Tik-Tok House">TTH</abbr></li>
+  <li>Карина Кросс</li>
+  <li>Pokrov</li>
+  <li>mahavsekruto</li>
+  </strong>\>
+    </ol>
+    <ul>
+      <strong>
 <footer>Алишерова Гульназ</footer>
 
 </body>
