Added new lorems

--- a/smth.html
+++ b/smth.html
@@ -194,5 +194,10 @@
 <footer>Алишерова Гульназ</footer>
 
 <button>mee</button>
+
+<p class="yellow">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores enim <em>harum</em> ea quam optio maxime nihil eveniet aspernatur voluptas, in veniam id aperiam placeat nobis esse debitis minus illo nostrum.</p>
+  <p>Velit exercitationem ex iste ullam! Pariatur est eos consequatur obcaecati <strong>laboriosam</strong> error? Molestiae magnam voluptates at voluptas voluptatibus, consectetur exercitationem corporis repudiandae necessitatibus, quod nostrum recusandae accusamus dicta fuga cumque.</p>
+  <p class="red-background yellow">Iste doloribus sapiente quas enim vero. Eos itaque incidunt hic aliquid quasi id quae assumenda quia aperiam omnis totam, veritatis neque enim. Delectus ipsum esse minus maxime rerum eaque ad.</p>
+  <p class="red-background">Id ipsam, neque asperiores reiciendis quo tempora exercitationem nostrum molestiae, <strong>architecto</strong> ipsum tempore dicta amet? Minus esse modi libero et minima assumenda. Temporibus, hic fuga. Quos sunt autem libero quasi.</p>
 </body>
 </html>
