--- a/smth.html
+++ b/smth.html
@@ -199,5 +199,10 @@
   <p>Velit exercitationem ex iste ullam! Pariatur est eos consequatur obcaecati <strong>laboriosam</strong> error? Molestiae magnam voluptates at voluptas voluptatibus, consectetur exercitationem corporis repudiandae necessitatibus, quod nostrum recusandae accusamus dicta fuga cumque.</p>
   <p class="red-background yellow">Iste doloribus sapiente quas enim vero. Eos itaque incidunt hic aliquid quasi id quae assumenda quia aperiam omnis totam, veritatis neque enim. Delectus ipsum esse minus maxime rerum eaque ad.</p>
   <p class="red-background">Id ipsam, neque asperiores reiciendis quo tempora exercitationem nostrum molestiae, <strong>architecto</strong> ipsum tempore dicta amet? Minus esse modi libero et minima assumenda. Temporibus, hic fuga. Quos sunt autem libero quasi.</p>
+
+  <h2>Климат</h2>
+<img src="./ym.l;thcb.png" alt="">
+<p>Климат Нью-Джерси — умеренный континентальный. Лето обычно жаркое и влажное, в среднем 25 дней в году температура составляет или превышает 32 °С. Зима — сравнительно холодная, температуры в северо-западной части штата обычно ниже, чем в других районах. Годовой уровень осадков меняется от 1100 до 1300 мм. Уровень твёрдых осадков в течение зимы меняется от 25-38 см на юге и на побережье до 38-76 см в центральной части и на северо-востоке и достигают 100—130 см на северо-западе. В среднем в году 120 дней с осадками.</p>
+
 </body>
 </html>
