--- a/smth.html
+++ b/smth.html
@@ -204,5 +204,7 @@
 <img src="./ym.l;thcb.png" alt="">
 <p>Климат Нью-Джерси — умеренный континентальный. Лето обычно жаркое и влажное, в среднем 25 дней в году температура составляет или превышает 32 °С. Зима — сравнительно холодная, температуры в северо-западной части штата обычно ниже, чем в других районах. Годовой уровень осадков меняется от 1100 до 1300 мм. Уровень твёрдых осадков в течение зимы меняется от 25-38 см на юге и на побережье до 38-76 см в центральной части и на северо-востоке и достигают 100—130 см на северо-западе. В среднем в году 120 дней с осадками.</p>
 
+<hr>
+<h1>эээм пока</h1>
 </body>
 </html>
