--- a/smth.html
+++ b/smth.html
@@ -206,7 +206,22 @@
 
 <hr>
 <h1>эээм пока</h1>
-
+<strong>
+  <li>Billie Ilish</li>
+  <li>Doja Cat</li>
+  <li>Eva Miller</li>
+  <li>Eva</li>
+  <li>Instasamka</li>
+  <li>Steve Lacy</li>
+  <li>EWF</li>
+  <li>lil peep</li>
+  <li>Grande</li>
+  <li><abbr title="Эдьдар Джарахов">Dlgreez</abbr></li>
+  <li>Cassanova</li>
+  <li>Katy Perry</li>
+  <li>Dua Lipa</li>
+  </strong>
+  
 <q>чтото на  понятном</q>
 </body>
 </html>
