--- a/smth.html
+++ b/smth.html
@@ -222,6 +222,17 @@
   <li>Dua Lipa</li>
   </strong>
   
+  <h2>Talas</h2>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quo illum dicta nemo ad! Ex tenetur quo minus
+ ratione? Laborum nihil dolores esse facilis! Commodi minima temporibus nesciunt laborum minus.
+  Sit perspiciatis, dignissimos illum commodi, in eligendi consequuntur quam, error veniam officiis qui sint!
+ Molestias, quaerat, itaque nam perspiciatis ab cupiditate doloribus aliquam natus, explicabo iste laborum
+ officiis quas placeat!
+ Fugit optio quis voluptatum sit nostrum vitae at pariatur, eum minima? Corrupti omnis amet hic harum numquam
+dolorem recusandae delectus tempore, praesentium fugit temporibus perspiciatis! Totam placeat sit omnis
+ vero!</p>
+
 <q>чтото на  понятном</q>
 </body>
 </html>
