--- a/smth.html
+++ b/smth.html
@@ -236,5 +236,7 @@ dolorem recusandae delectus tempore, praesentium fugit temporibus perspiciatis! 
  <h5>I can't understand </h5>
  
 <q>чтото на  понятном</q>
+<i  class="example-16" id="example-16">Lorem, ipsum dolor.</i>
+
 </body>
 </html>
